[B]Retrospect v5.2.4 - Changelog - 2020-05-12[/B]

This new version of Retrospect shuffles some of the channel load logic and mostly fixes an issue in the NPO live channels.

[B]Framework related[/B]
* Added: option to limit certain settings to only some channel in a channel set
* Added: option to generate a channel guid for a setting in a channel set

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Added: option to specify a login for Dplay.se (Fixes #1364)
* Fixed: don't group special folders for kijk.nl (Fixes #1377)