@@ -12,3 +12,4 @@ _None_
 [B]Channel related[/B]
 * Added: option to specify a login for Dplay.se (Fixes #1364)
 * Fixed: don't group special folders for kijk.nl (Fixes #1377)
+* Fixed: VRT.nu changed their login code (Fixes #1379)
